# v6502r

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  fibs.ts  fips.yml
.github/workflows/: build.yml  deploy.yml
ext/asmx/: CMakeLists.txt  README.txt  asmx-doc.html
ext/asmx/src/: asm6502.c  asmx.c  asmx.h  asmz80.c
ext/asmx/test/: 6502.asm  6502u.asm
ext/asmx/test/ref/: 6502.asm.hex  6502.asm.lst  test.asm.hex
ext/chips/: README.txt  ui_dasm.h  ui_memedit.h
ext/imgui_markdown/: changes.txt  imgui_markdown.h
ext/perfect6502/: CMakeLists.txt  netlist_2a03.h  netlist_6502.h  netlist_sim.c  netlist_sim.h  netlist_z80.h  perfect2a03.c  perfect2a03.h  perfect6502.c  perfect6502.h  perfectz80.c  perfectz80.h  readme.txt  types.h
ext/sokol/: CMakeLists.txt  sokol.c  sokol.m  sokol_defines.h
ext/texteditor/: CMakeLists.txt  TextEditor.cpp
ext/visual6502/: dump_2a03.py  dump_6502.py  dump_nodenames.py  dump_segdefs.py  dump_z80.py  earcut.py  netlist.py  nodenames.py  readme.txt  segdefs.py  tripy.py
ext/visual6502/2a03/: nodenames.js
fips-files/configs/: wasm-ninja-debug.yml  wasm-ninja-release.yml  wasm-vscode-debug.yml  wasm-vscode-release.yml
fips-files/generators/: dump.py
fips-files/verbs/: webpage.py
src/: CMakeLists.txt  asm.c  asm.h  chipvis.c  chipvis.glsl  chipvis.h  common.c  common.h  gfx.c  gfx.glsl  gfx.h  imgui_util.cc  imgui_util.h  input.c  input.h  main.c  nodenames.c  nodenames.h  pick.c  pick.h  segdefs.c  segdefs.h  shell.html  shell_z80.html  sim.c  sim.h  sokol.c  sokol.m  trace.c  trace.h  ui.cc  ui.h  ui_asm.cc  ui_asm.h  ui_chip.cc  ui_chipvis.cc  ui_hello.cc  util.c  util.h  v6502r.c  (+1 more)
src/2a03/: nodegroups.h  nodenames.c  nodenames.h  segdefs.h  shell.html
src/fonts/: fonts.h
src/gfx/: CMakeLists.txt  gfx.c  gfx.h
src/m6502/: nodegroups.h  nodenames.c  nodenames.h  segdefs.h  shell.html
src/pick/: CMakeLists.txt  pick.c  pick.h
src/res/: about.md  fonts.h  fonts.yml  help_assembler.md  markdown.h  markdown.yml  readme.txt
src/sokol/: CMakeLists.txt  sokol.c  sokol.cc
src/z80/: nodegroups.h  nodenames.c  nodenames.h  segdefs.h  shell.html
web/: shell.html
