cmake_minimum_required(VERSION 3.21)
project(v6502r C CXX)
set(GLOBAL PROPERTY USE_FOLDERS ON)
set(CMAKE_CONFIGURATION_TYPES Debug Release)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
add_compile_options(-Wall -Wextra)
find_program(DENO deno REQUIRED)
add_custom_target(ALL_JOBS COMMAND ${DENO} run --allow-all --no-config jsr:@floooh/fibs runjobs macos-make-debug WORKING_DIRECTORY /Users/floh/projects/v6502r)
add_library(sokol INTERFACE )
source_group(TREE /Users/floh/projects/v6502r/.fibs/imports/sokol FILES )
target_link_libraries(sokol INTERFACE "-framework Foundation" "-framework AudioToolbox" "-framework Cocoa" "-framework Quartzcore" "-framework MetalKit" "-framework Metal")
target_include_directories(sokol INTERFACE "/Users/floh/projects/v6502r/.fibs/imports/sokol/.")
target_include_directories(sokol INTERFACE "/Users/floh/projects/v6502r/.fibs/imports/sokol/./util")
target_compile_definitions(sokol INTERFACE SOKOL_METAL=1)
target_compile_options(sokol INTERFACE $<$<COMPILE_LANGUAGE:CXX>:--language objective-c++>  INTERFACE $<$<COMPILE_LANGUAGE:C>:--language objective-c>)
add_library(imgui-docking STATIC /Users/floh/projects/v6502r/.fibs/imports/dcimgui/src-docking/cimgui.cpp /Users/floh/projects/v6502r/.fibs/imports/dcimgui/src-docking/cimgui_internal.cpp /Users/floh/projects/v6502r/.fibs/imports/dcimgui/src-docking/imgui_demo.cpp /Users/floh/projects/v6502r/.fibs/imports/dcimgui/src-docking/imgui_draw.cpp /Users/floh/projects/v6502r/.fibs/imports/dcimgui/src-docking/imgui_tables.cpp /Users/floh/projects/v6502r/.fibs/imports/dcimgui/src-docking/imgui_widgets.cpp /Users/floh/projects/v6502r/.fibs/imports/dcimgui/src-docking/imgui.cpp)
source_group(TREE /Users/floh/projects/v6502r/.fibs/imports/dcimgui/src-docking FILES /Users/floh/projects/v6502r/.fibs/imports/dcimgui/src-docking/cimgui.cpp /Users/floh/projects/v6502r/.fibs/imports/dcimgui/src-docking/cimgui_internal.cpp /Users/floh/projects/v6502r/.fibs/imports/dcimgui/src-docking/imgui_demo.cpp /Users/floh/projects/v6502r/.fibs/imports/dcimgui/src-docking/imgui_draw.cpp /Users/floh/projects/v6502r/.fibs/imports/dcimgui/src-docking/imgui_tables.cpp /Users/floh/projects/v6502r/.fibs/imports/dcimgui/src-docking/imgui_widgets.cpp /Users/floh/projects/v6502r/.fibs/imports/dcimgui/src-docking/imgui.cpp)
target_include_directories(imgui-docking PUBLIC "/Users/floh/projects/v6502r/.fibs/imports/dcimgui/src-docking/.")
target_compile_options(imgui-docking PUBLIC -Wno-return-type-c-linkage  PUBLIC -Wno-unused-function)
add_library(asmx_6502 STATIC /Users/floh/projects/v6502r/ext/asmx/src/asmx.c /Users/floh/projects/v6502r/ext/asmx/src/asmx.h /Users/floh/projects/v6502r/ext/asmx/src/asm6502.c)
source_group(TREE /Users/floh/projects/v6502r/ext/asmx/src FILES /Users/floh/projects/v6502r/ext/asmx/src/asmx.c /Users/floh/projects/v6502r/ext/asmx/src/asmx.h /Users/floh/projects/v6502r/ext/asmx/src/asm6502.c)
target_include_directories(asmx_6502 PUBLIC "/Users/floh/projects/v6502r/ext/asmx/src/.")
target_compile_definitions(asmx_6502 PUBLIC ASMX_6502=1)
target_compile_options(asmx_6502 PUBLIC -Wno-implicit-fallthrough)
add_library(asmx_z80 STATIC /Users/floh/projects/v6502r/ext/asmx/src/asmx.c /Users/floh/projects/v6502r/ext/asmx/src/asmx.h /Users/floh/projects/v6502r/ext/asmx/src/asmz80.c)
source_group(TREE /Users/floh/projects/v6502r/ext/asmx/src FILES /Users/floh/projects/v6502r/ext/asmx/src/asmx.c /Users/floh/projects/v6502r/ext/asmx/src/asmx.h /Users/floh/projects/v6502r/ext/asmx/src/asmz80.c)
target_include_directories(asmx_z80 PUBLIC "/Users/floh/projects/v6502r/ext/asmx/src/.")
target_compile_definitions(asmx_z80 PUBLIC ASMX_Z80=1)
target_compile_options(asmx_z80 PRIVATE -Wno-implicit-fallthrough)
add_library(perfect6502 STATIC /Users/floh/projects/v6502r/ext/perfect6502/netlist_6502.h /Users/floh/projects/v6502r/ext/perfect6502/types.h /Users/floh/projects/v6502r/ext/perfect6502/netlist_sim.h /Users/floh/projects/v6502r/ext/perfect6502/netlist_sim.c /Users/floh/projects/v6502r/ext/perfect6502/perfect6502.h /Users/floh/projects/v6502r/ext/perfect6502/perfect6502.c)
source_group(TREE /Users/floh/projects/v6502r/ext/perfect6502 FILES /Users/floh/projects/v6502r/ext/perfect6502/netlist_6502.h /Users/floh/projects/v6502r/ext/perfect6502/types.h /Users/floh/projects/v6502r/ext/perfect6502/netlist_sim.h /Users/floh/projects/v6502r/ext/perfect6502/netlist_sim.c /Users/floh/projects/v6502r/ext/perfect6502/perfect6502.h /Users/floh/projects/v6502r/ext/perfect6502/perfect6502.c)
target_include_directories(perfect6502 PUBLIC "/Users/floh/projects/v6502r/ext/perfect6502/.")
add_library(perfectz80 STATIC /Users/floh/projects/v6502r/ext/perfect6502/netlist_z80.h /Users/floh/projects/v6502r/ext/perfect6502/types.h /Users/floh/projects/v6502r/ext/perfect6502/netlist_sim.h /Users/floh/projects/v6502r/ext/perfect6502/netlist_sim.c /Users/floh/projects/v6502r/ext/perfect6502/perfectz80.h /Users/floh/projects/v6502r/ext/perfect6502/perfectz80.c)
source_group(TREE /Users/floh/projects/v6502r/ext/perfect6502 FILES /Users/floh/projects/v6502r/ext/perfect6502/netlist_z80.h /Users/floh/projects/v6502r/ext/perfect6502/types.h /Users/floh/projects/v6502r/ext/perfect6502/netlist_sim.h /Users/floh/projects/v6502r/ext/perfect6502/netlist_sim.c /Users/floh/projects/v6502r/ext/perfect6502/perfectz80.h /Users/floh/projects/v6502r/ext/perfect6502/perfectz80.c)
target_include_directories(perfectz80 PUBLIC "/Users/floh/projects/v6502r/ext/perfect6502/.")
add_library(perfect2a03 STATIC /Users/floh/projects/v6502r/ext/perfect6502/netlist_2a03.h /Users/floh/projects/v6502r/ext/perfect6502/types.h /Users/floh/projects/v6502r/ext/perfect6502/netlist_sim.h /Users/floh/projects/v6502r/ext/perfect6502/netlist_sim.c /Users/floh/projects/v6502r/ext/perfect6502/perfect2a03.h /Users/floh/projects/v6502r/ext/perfect6502/perfect2a03.c)
source_group(TREE /Users/floh/projects/v6502r/ext/perfect6502 FILES /Users/floh/projects/v6502r/ext/perfect6502/netlist_2a03.h /Users/floh/projects/v6502r/ext/perfect6502/types.h /Users/floh/projects/v6502r/ext/perfect6502/netlist_sim.h /Users/floh/projects/v6502r/ext/perfect6502/netlist_sim.c /Users/floh/projects/v6502r/ext/perfect6502/perfect2a03.h /Users/floh/projects/v6502r/ext/perfect6502/perfect2a03.c)
target_include_directories(perfect2a03 PUBLIC "/Users/floh/projects/v6502r/ext/perfect6502/.")
add_library(sokolimpl STATIC /Users/floh/projects/v6502r/ext/sokol/sokol.c)
source_group(TREE /Users/floh/projects/v6502r/ext/sokol FILES /Users/floh/projects/v6502r/ext/sokol/sokol.c)
target_link_libraries(sokolimpl sokol imgui-docking)
add_library(texteditor STATIC /Users/floh/projects/v6502r/ext/texteditor/TextEditor.cpp /Users/floh/projects/v6502r/ext/texteditor/TextEditor.h)
source_group(TREE /Users/floh/projects/v6502r/ext/texteditor FILES /Users/floh/projects/v6502r/ext/texteditor/TextEditor.cpp /Users/floh/projects/v6502r/ext/texteditor/TextEditor.h)
target_link_libraries(texteditor imgui-docking)
target_include_directories(texteditor PUBLIC "/Users/floh/projects/v6502r/ext/texteditor/.")
target_compile_options(texteditor PRIVATE -Wno-unused-but-set-variable)
add_library(assets INTERFACE /Users/floh/projects/v6502r/src/res/help_assembler.md /Users/floh/projects/v6502r/src/res/about.md /Users/floh/projects/v6502r/src/res/fonts.h /Users/floh/projects/v6502r/src/res/markdown.h)
source_group(TREE /Users/floh/projects/v6502r/src/res FILES /Users/floh/projects/v6502r/src/res/help_assembler.md /Users/floh/projects/v6502r/src/res/about.md)
source_group(gen FILES /Users/floh/projects/v6502r/src/res/fonts.h /Users/floh/projects/v6502r/src/res/markdown.h)
target_link_libraries(assets INTERFACE sokol texteditor)
add_dependencies(assets ALL_JOBS)
